[package]
name = "big_num_math"
version = "2.1.3"
edition = "2021"
authors     = [ "software9119.technology" ]
license     = "MIT"
description = "Simple library for computations on large numbers."
keywords    = [ "math", "large-numbers", "big-int" ]
categories  = [ "no-std", "mathematics" ]
repository  = "https://github.com/bravequickcleverfibreyarn/big_num_math"
documentation = "https://docs.rs/big_num_math/latest/big_num_math/"
readme        = "README.md"
homepage      = "https://github.com/bravequickcleverfibreyarn/big_num_math"

[features]
ext-tests = []
