[package]
name = "big_num_math"
version = "4.2.2"
edition = "2021"
authors     = [ "software9119.technology" ]
license     = "MIT"
description = "Simple library for computations on large numbers."
keywords    = [ "math", "large-numbers", "big-int", "bigint" ]
categories  = [ "no-std", "mathematics" ]
repository  = "https://github.com/deep-outcome/big_num_math"
documentation = "https://docs.rs/big_num_math/latest/big_num_math/"
readme        = "README.md"
exclude = ["/note", "/rustfmt.toml.disabled"]

[features]
ext-tests = []
shorter-dividend-support = []
one-power-mulmul-support = []
